--- a/main.ipynb
+++ b/main.ipynb
@@ -51,15 +51,7 @@
       "Loading ecore_555 from pickle\n",
       "Loaded ecore_555 with 281 graphs\n",
       "Loaded ecore_555 with 281 graphs\n",
-      "Graphs: 281\n",
-      "Loading modelset from pickle\n",
-      "Loaded modelset with 830 graphs\n",
-      "Loaded modelset with 830 graphs\n",
-      "Graphs: 830\n",
-      "Loading mar-ecore-github from pickle\n",
-      "Loaded mar-ecore-github with 5388 graphs\n",
-      "Loaded mar-ecore-github with 5388 graphs\n",
-      "Graphs: 5388\n"
+      "Graphs: 281\n"
      ]
     }
    ],
@@ -72,14 +64,14 @@
     "    min_edges = 10\n",
     ")\n",
     "ecore = ModelDataset('ecore_555', reload=False, **config_params)\n",
-    "modelset = ModelDataset('modelset', reload=False, remove_duplicates=True, **config_params)\n",
-    "mar = ModelDataset('mar-ecore-github', reload=False, **config_params)\n",
+    "# modelset = ModelDataset('modelset', reload=False, remove_duplicates=True, **config_params)\n",
+    "# mar = ModelDataset('mar-ecore-github', reload=False, **config_params)\n",
     "\n",
     "\n",
     "datasets = {\n",
     "    'ecore': ecore,\n",
-    "    'modelset': modelset,\n",
-    "    'mar': mar\n",
+    "    # 'modelset': modelset,\n",
+    "    # 'mar': mar\n",
     "}"
    ]
   },
@@ -91,7 +83,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "71f91b86976a4637adf0f5efc4fd80d1",
+       "model_id": "4c4c1a356cc944bbb8f61de95b78ea88",
        "version_major": 2,
        "version_minor": 0
       },
@@ -111,6 +103,7 @@
     "    reload=False,\n",
     "    add_negative_train_samples=True,\n",
     "    neg_sampling_ratio=1,\n",
+    "    use_edge_types=False,\n",
     ")\n",
     "\n",
     "ecore_graph_dataset = GraphDataset(ecore, **graph_data_params)\n",
@@ -122,198 +115,67 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Data(x=[45, 768], edge_index=[2, 45], edge_attr=[45, 768], y=1, overall_edge_index=[2, 56], train_pos_edge_label_index=[2, 45], train_pos_edge_label=[45], train_neg_edge_label_index=[2, 45], train_neg_edge_label=[45], test_pos_edge_label_index=[2, 11], test_pos_edge_label=[11], test_neg_edge_label_index=[2, 11], test_neg_edge_label=[11], num_nodes=45)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "max(ecore_graph_dataset, key=lambda d: d.x.shape[1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "768"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ecore_graph_dataset[0].x.shape[1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
    "outputs": [],
    "source": [
-    "from torch_geometric.loader import DataLoader\n",
-    "\n",
-    "batch_size = 32\n",
-    "ecore_loader_train = DataLoader(ecore_graph_dataset, batch_size=batch_size, shuffle=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "from torch_geometric.nn import GCNConv\n",
+    "from models.gnn_layers import (\n",
+    "    GATv2, \n",
+    "    FeedForward, \n",
+    "    GNNLinkPredictor\n",
+    ")\n",
+    "from trainers.link_predictor import GNNLinkPredictorTrainer\n",
     "\n",
     "\n",
-    "class MultiTaskGNN(nn.Module):\n",
-    "    def __init__(self, in_channels, hidden_channels, num_edge_types):\n",
-    "        super(MultiTaskGNN, self).__init__()\n",
-    "        self.conv1 = GCNConv(in_channels, hidden_channels)\n",
-    "        self.conv2 = GCNConv(hidden_channels, hidden_channels)\n",
-    "        self.link_pred_head = nn.Linear(hidden_channels * 2, 1)  # Link prediction head\n",
-    "        self.edge_class_head = nn.Linear(hidden_channels * 2, num_edge_types)  # Edge classification head\n",
+    "input_dim = ecore_graph_dataset[0].x.size(1)\n",
+    "hidden_dim = 64\n",
+    "output_dim = 128\n",
+    "num_layers = 3\n",
+    "num_heads = 4\n",
+    "edge_dim = ecore_graph_dataset[0].edge_attr.size(1)\n",
+    "residual = True\n",
     "\n",
     "\n",
-    "    def forward(self, x, edge_index):\n",
-    "        # x: Node features [num_nodes, in_channels]\n",
-    "        # edge_index: Graph connectivity [2, num_edges]\n",
-    "        \n",
-    "        # GNN layers\n",
-    "        x = self.conv1(x, edge_index)\n",
-    "        x = F.relu(x)\n",
-    "        x = self.conv2(x, edge_index)\n",
-    "        \n",
-    "        # For link prediction and edge classification, we use edge embeddings\n",
-    "        row, col = edge_index\n",
-    "        edge_features = torch.cat([x[row], x[col]], dim=1)  # [num_edges, hidden_channels*2]\n",
-    "        \n",
-    "        # Link prediction\n",
-    "        link_pred = torch.sigmoid(self.link_pred_head(edge_features)).squeeze()  # [num_edges]\n",
-    "        \n",
-    "        # Edge classification\n",
-    "        edge_class = self.edge_class_head(edge_features)  # [num_edges, num_edge_types]\n",
-    "        \n",
-    "        return link_pred, edge_class\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "LinkPredictor(\n",
-       "  (conv): GNNConv(\n",
-       "    (conv_layers): ModuleList(\n",
-       "      (0): GATv2Conv(768, 64, heads=4)\n",
-       "      (1-2): 2 x GATv2Conv(256, 64, heads=4)\n",
-       "    )\n",
-       "    (activation): ReLU()\n",
-       "    (dropout): Dropout(p=0.1, inplace=False)\n",
-       "  )\n",
-       "  (link_pred_head): FeedForward(\n",
-       "    (ff): Sequential(\n",
-       "      (0): Linear(in_features=1280, out_features=64, bias=False)\n",
-       "      (1): ReLU()\n",
-       "      (2): Dropout(p=0.1, inplace=False)\n",
-       "      (3): Linear(in_features=64, out_features=1, bias=False)\n",
-       "    )\n",
-       "  )\n",
-       "  (edge_class_head): FeedForward(\n",
-       "    (ff): Sequential(\n",
-       "      (0): Linear(in_features=1280, out_features=64, bias=False)\n",
-       "      (1): ReLU()\n",
-       "      (2): Dropout(p=0.1, inplace=False)\n",
-       "      (3): Linear(in_features=64, out_features=3, bias=False)\n",
-       "    )\n",
-       "  )\n",
-       ")"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from models.gnn_layers import LinkPredictor\n",
-    "from settings import device\n",
-    "\n",
-    "lp_model = LinkPredictor(\n",
-    "    'GATv2Conv',\n",
-    "    ecore_graph_dataset[0].x.shape[1],\n",
-    "    64,\n",
-    "    3,\n",
-    "    num_heads=4,\n",
-    "    dropout = 0.1,\n",
-    "    residual = False, \n",
-    "    use_edge_attrs = True,\n",
-    "    edge_attrs_dim=768,\n",
-    "    add_classification_head=True,\n",
-    "    num_edge_types=3,\n",
-    "    ff_hidden_dim=64\n",
+    "gat = GATv2(\n",
+    "    input_dim=input_dim,\n",
+    "    hidden_dim=hidden_dim,\n",
+    "    output_dim=output_dim,\n",
+    "    num_layers=num_layers,\n",
+    "    num_heads=num_heads,\n",
+    "    edge_dim=edge_dim,\n",
+    "    residual=residual,\n",
+    "    dropout=0.2,\n",
     ")\n",
     "\n",
-    "lp_model.to(device)"
+    "lp_head = FeedForward(\n",
+    "    input_dim=(output_dim*num_heads if num_heads > 1 else output_dim) * 2,\n",
+    "    hidden_dim=hidden_dim,\n",
+    "    output_dim=1,\n",
+    "    num_layers=3,\n",
+    ")\n",
+    "\n",
+    "ec_head = FeedForward(\n",
+    "    input_dim=(output_dim*num_heads if num_heads > 1 else output_dim) * 2,\n",
+    "    hidden_dim=hidden_dim,\n",
+    "    output_dim=3,\n",
+    "    num_layers=3,\n",
+    "    final_activation='softmax',\n",
+    ")\n",
+    "\n",
+    "gnn_lp = GNNLinkPredictor(gat, lp_head, ec_head)\n",
+    "lp_trainer = GNNLinkPredictorTrainer(\n",
+    "    gnn_lp, \n",
+    "    ecore_graph_dataset, \n",
+    "    use_link_predictor=True, \n",
+    "    use_edge_classifier=True\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "for batch in ecore_loader_train:\n",
-    "    batch = batch.to(device)\n",
-    "    out = lp_model(batch)\n",
-    "    break"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(tensor([0.4335, 0.4738, 0.4692,  ..., 0.4525, 0.4680, 0.4391], device='cuda:0',\n",
-       "        grad_fn=<SqueezeBackward0>),\n",
-       " tensor([[-0.0176,  0.0209,  0.1657],\n",
-       "         [-0.0385, -0.0550,  0.1525],\n",
-       "         [-0.0484, -0.0621,  0.0976],\n",
-       "         ...,\n",
-       "         [-0.0576, -0.1183,  0.0383],\n",
-       "         [-0.0693, -0.0172,  0.0558],\n",
-       "         [-0.0091,  0.0272,  0.0776]], device='cuda:0', grad_fn=<MmBackward0>))"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "out"
+    "lp_trainer.train_epochs(100)"
    ]
   },
   {
