Added bert-based link prediction

--- a/main.ipynb
+++ b/main.ipynb
@@ -41,17 +41,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading ecore_555 from pickle\n",
-      "Loaded ecore_555 with 281 graphs\n",
-      "Loaded ecore_555 with 281 graphs\n",
-      "Graphs: 281\n"
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -64,14 +65,14 @@
     "    min_edges = 10\n",
     ")\n",
     "ecore = ModelDataset('ecore_555', reload=False, **config_params)\n",
-    "# modelset = ModelDataset('modelset', reload=False, remove_duplicates=True, **config_params)\n",
-    "# mar = ModelDataset('mar-ecore-github', reload=False, **config_params)\n",
+    "modelset = ModelDataset('modelset', reload=True, remove_duplicates=True, **config_params)\n",
+    "mar = ModelDataset('mar-ecore-github', reload=True, **config_params)\n",
     "\n",
     "\n",
     "datasets = {\n",
     "    'ecore': ecore,\n",
-    "    # 'modelset': modelset,\n",
-    "    # 'mar': mar\n",
+    "    'modelset': modelset,\n",
+    "    'mar': mar\n",
     "}"
    ]
   },
@@ -177,149 +178,6 @@
    "source": [
     "lp_trainer.train_epochs(100)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch: 001, Loss: 0.6956, Test Accuracy: 0.5000\n"
-     ]
-    }
-   ],
-   "source": [
-    "# import torch\n",
-    "# import torch.nn.functional as F\n",
-    "# import torch.optim as optim\n",
-    "# from torch_geometric.data import Data\n",
-    "# from torch_geometric.loader import DataLoader\n",
-    "# from torch_geometric.nn import GCNConv\n",
-    "# from torch_geometric.nn.aggr import SortAggregation\n",
-    "# import networkx as nx\n",
-    "# from torch_geometric.transforms import RandomLinkSplit\n",
-    "\n",
-    "\n",
-    "# def remap_node_indices(subgraph, center_node):\n",
-    "#     mapping = {node: i for i, node in enumerate(subgraph.nodes())}\n",
-    "#     subgraph = nx.relabel_nodes(subgraph, mapping)\n",
-    "#     sub_edge_index = torch.tensor(list(subgraph.edges)).t().contiguous()\n",
-    "#     sub_x = torch.ones(subgraph.number_of_nodes(), 1)  # Example node features\n",
-    "#     center_node_idx = mapping[center_node]\n",
-    "#     return sub_x, sub_edge_index, center_node_idx\n",
-    "\n",
-    "# # Prepare the train and test datasets for SEAL model\n",
-    "# class SEALGraphData:\n",
-    "#     def __init__(\n",
-    "#             self, \n",
-    "#             graph,\n",
-    "#             edge_index,\n",
-    "#             pos_edge_index,\n",
-    "#             neg_edge_index,\n",
-    "#             hops=1\n",
-    "#         ):\n",
-    "#         self.edge_index = edge_index\n",
-    "#         self.pos_edge_index = pos_edge_index\n",
-    "#         self.neg_edge_index = neg_edge_index\n",
-    "#         self.graph = graph\n",
-    "#         self.hops = hops\n",
-    "\n",
-    "\n",
-    "\n",
-    "#     def __len__(self):\n",
-    "#         return self.pos_edge_index.size(1) + self.neg_edge_index.size(1)\n",
-    "\n",
-    "#     def __getitem__(self, idx):\n",
-    "#         if idx < self.pos_edge_index.size(1):\n",
-    "#             u, v = self.pos_edge_index[:, idx]\n",
-    "#             y = 1\n",
-    "#         else:\n",
-    "#             u, v = self.neg_edge_index[:, idx - self.pos_edge_index.size(1)]\n",
-    "#             y = 0\n",
-    "\n",
-    "#         subgraph = nx.ego_graph(self.graph, u.item(), radius=self.hops)\n",
-    "#         subgraph = nx.subgraph(subgraph, list(subgraph.nodes) + [v.item()])\n",
-    "#         sub_x, sub_edge_index, center_node_idx = remap_node_indices(subgraph, u.item())\n",
-    "\n",
-    "#         return Data(\n",
-    "#             x=sub_x, \n",
-    "#             edge_index=sub_edge_index, \n",
-    "#             y=y, \n",
-    "#             center_node_idx=center_node_idx\n",
-    "#         )\n",
-    "\n",
-    "\n",
-    "# def get_link_prediction_train_test_graph_data(\n",
-    "#         graph, \n",
-    "#         num_val=0, \n",
-    "#         num_test=0.2, \n",
-    "#         add_negative_train_samples=True,\n",
-    "#         neg_sampling_ratio=1,\n",
-    "#     ):\n",
-    "#     transform = RandomLinkSplit(\n",
-    "#         num_val=num_val, \n",
-    "#         num_test=num_test, \n",
-    "#         neg_sampling_ratio=neg_sampling_ratio,\n",
-    "#         add_negative_train_samples=add_negative_train_samples,\n",
-    "#         split_labels=True\n",
-    "#     )\n",
-    "\n",
-    "#     # Apply the transform\n",
-    "#     train_data, _, test_data = transform(\n",
-    "#         Data(\n",
-    "#             edge_index=graph.edge_index, \n",
-    "#             num_nodes=ecore_graph.number_of_nodes()\n",
-    "#         )\n",
-    "#     )\n",
-    "\n",
-    "#     return train_data, test_data\n",
-    "\n",
-    "#     # train_graph_data = SEALGraphData(\n",
-    "#     #     graph, \n",
-    "#     #     train_data.edge_index, \n",
-    "#     #     train_data.pos_edge_label_index, \n",
-    "#     #     train_data.neg_edge_label_index,\n",
-    "#     #     hops=hops\n",
-    "    \n",
-    "#     # )\n",
-    "\n",
-    "#     # test_graph_data = SEALGraphData(\n",
-    "#     #     graph, \n",
-    "#     #     test_data.edge_index, \n",
-    "#     #     test_data.pos_edge_label_index, \n",
-    "#     #     test_data.neg_edge_label_index,\n",
-    "#     #     hops=hops\n",
-    "#     # )\n",
-    "\n",
-    "#     # return train_graph_data, test_graph_data\n",
-    "    \n",
-    "\n",
-    "# train_data, test_data = get_link_prediction_train_test_graph_data(ecore_graph)\n",
-    "# # Create train and test dataloaders\n",
-    "# batch_size = 32\n",
-    "\n",
-    "# # train_loader = DataLoader(train_dataset, batch_size=batch_size, shuffle=True)\n",
-    "# # test_loader = DataLoader(test_dataset, batch_size=batch_size, shuffle=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from models.gnn_layers import GNNConv"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
