Added bert link prediction code

--- a/bert_train.ipynb
+++ b/bert_train.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,17 +27,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading ecore_555 from pickle\n",
-      "Loaded ecore_555 with 281 graphs\n",
-      "Loaded ecore_555 with 281 graphs\n",
-      "Graphs: 281\n"
+      "Loading mar-ecore-github from pickle\n",
+      "Loaded mar-ecore-github with 5389 graphs\n",
+      "Loaded mar-ecore-github with 5389 graphs\n",
+      "Graphs: 2997\n"
      ]
     }
    ],
@@ -49,8 +49,12 @@
     "    min_enr = 1.2,\n",
     "    min_edges = 10\n",
     ")\n",
-    "ecore = ModelDataset('ecore_555', reload=False, **config_params)\n",
-    "# modelset = ModelDataset('modelset', reload=True, remove_duplicates=True, **config_params)\n",
+    "\n",
+    "dataset_name = 'modelset'\n",
+    "dataset_name = 'ecore_555'\n",
+    "dataset_name = 'mar-ecore-github'\n",
+    "# ecore = ModelDataset(dataset_name, reload=False, **config_params)\n",
+    "modelset = ModelDataset(dataset_name, reload=False, remove_duplicates=True, **config_params)\n",
     "# mar = ModelDataset('mar-ecore-github', reload=True, **config_params)\n",
     "\n",
     "\n",
@@ -63,18 +67,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b49db32bd6724f8182d1a79c31e4982d",
+       "model_id": "569b598afa0943f1bdfb1e2ef856bc24",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Processing ecore_555:   0%|          | 0/281 [00:00<?, ?it/s]"
+       "Processing modelset:   0%|          | 0/830 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -92,12 +96,12 @@
     "    use_edge_types=False,\n",
     ")\n",
     "\n",
-    "ecore_graph_dataset = GraphDataset(ecore, **graph_data_params)"
+    "graph_dataset = GraphDataset(modelset, **graph_data_params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,38 +135,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cccccfb3a8284589a60308dfb417837d",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Getting link prediction data:   0%|          | 0/281 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "bert_dataset = ecore_graph_dataset.get_link_prediction_data(\n",
+    "from settings import LP_TASK_LINK_PRED\n",
+    "\n",
+    "task_name = LP_TASK_LINK_PRED\n",
+    "\n",
+    "bert_dataset = graph_dataset.get_link_prediction_data(\n",
     "    tokenizer=tokenizer,\n",
     "    distance=2,\n",
+    "    task_type=LP_TASK_LINK_PRED\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import Counter\n",
     "def oversample_dataset(dataset, oversampling_ratio=0.7):\n",
     "    \"\"\"\n",
     "    This function oversamples the classes that occur less frequently in the dataset.\n",
@@ -187,16 +180,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(Counter({0: 19453, 1: 14729, 2: 14596}), Counter({0: 4857, 1: 889, 2: 724}))"
+       "(Counter({1: 44719, 0: 44628}), Counter({1: 10797, 0: 10785}))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +218,7 @@
        "Embedding(30526, 768)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,14 +232,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.metrics import roc_auc_score, f1_score, precision_score, recall_score\n",
+    "from sklearn.metrics import (\n",
+    "    roc_auc_score, \n",
+    "    f1_score, \n",
+    "    precision_score, \n",
+    "    recall_score\n",
+    ")\n",
     "import torch.nn.functional as F\n",
     "\n",
-    "def compute_metrics(pred):\n",
+    "def compute_metrics_multi_classification(pred):\n",
+    "    labels = pred.label_ids\n",
+    "    preds = pred.predictions.argmax(-1)\n",
+    "    logits = torch.tensor(pred.predictions)\n",
+    "    probabilites = F.softmax(logits, dim=-1).numpy()\n",
+    "    acc = (preds == labels).mean()\n",
+    "    roc = roc_auc_score(labels, probabilites, multi_class='ovr')\n",
+    "    f1_macro = f1_score(labels, preds, average='macro')\n",
+    "    f1_micro = f1_score(labels, preds, average='micro')\n",
+    "    precision = precision_score(labels, preds, average='macro')\n",
+    "    recall = recall_score(labels, preds, average='macro')\n",
+    "\n",
+    "    return {\n",
+    "        'accuracy': acc,\n",
+    "        'roc_auc': roc,\n",
+    "        'f1_macro': f1_macro,\n",
+    "        'f1_micro': f1_micro,\n",
+    "        'precision': precision,\n",
+    "        'recall': recall\n",
+    "    }\n",
+    "\n",
+    "def compute_metrics_binary_classification(pred):\n",
     "    labels = pred.label_ids\n",
     "    preds = pred.predictions.argmax(-1)\n",
     "    logits = torch.tensor(pred.predictions)\n",
@@ -272,19 +291,43 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "from transformers import TrainingArguments, Trainer\n",
+    "import os\n",
     "\n",
+    "output_dir = os.path.join(\n",
+    "    'results',\n",
+    "    dataset_name,\n",
+    "    task_name\n",
+    ")\n",
+    "\n",
+    "logs_dir = os.path.join(\n",
+    "    'logs',\n",
+    "    dataset_name,\n",
+    "    task_name\n",
+    ")\n",
     "training_args = TrainingArguments(\n",
-    "    output_dir='./results',\n",
+    "    output_dir=output_dir,\n",
     "    num_train_epochs=3,\n",
     "    per_device_train_batch_size=32,\n",
     "    per_device_eval_batch_size=128,\n",
     "    warmup_steps=500,\n",
     "    weight_decay=0.01,\n",
-    "    logging_dir='./logs',\n",
-    "    logging_steps=10,\n",
+    "    logging_dir=logs_dir,\n",
+    "    logging_steps=1000,\n",
     "    eval_strategy='steps',\n",
     "    eval_steps=200,\n",
     "    save_steps=200,\n",
@@ -298,7 +341,7 @@
     "    args=training_args,\n",
     "    train_dataset=bert_dataset['train'],\n",
     "    eval_dataset=bert_dataset['test'],\n",
-    "    compute_metrics=compute_metrics\n",
+    "    compute_metrics=compute_metrics_binary_classification\n",
     ")\n",
     "\n",
     "trainer.train()"
