Refactored Graph Dataset Creation and Labeling

--- a/gnn_classification.ipynb
+++ b/gnn_classification.ipynb
@@ -127,6 +127,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Data(x=[3, 2], y=[3])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "from torch_geometric.data import Data\n",
+    "\n",
+    "d = Data()\n",
+    "setattr(d, 'x', torch.tensor([[1, 2], [3, 4], [5, 6]], dtype=torch.float))\n",
+    "setattr(d, 'y', torch.tensor([1, 2, 3], dtype=torch.float))\n",
+    "d"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 64,
    "metadata": {},
    "outputs": [
