Refactored Edge Classification

--- a/main.ipynb
+++ b/main.ipynb
@@ -13,14 +13,39 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading eamodelset from pickle\n",
+      "Loaded eamodelset with 936 graphs\n",
+      "Loaded eamodelset with 936 graphs\n",
+      "Graphs: 936\n",
+      "Loading graph dataset\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f9ba9eace68f4845a0057af428400ec6",
+       "model_id": "5f6976c451f140aa85bd3c50076de391",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Loading Ecore_555:   0%|          | 0/548 [00:00<?, ?it/s]"
+       "Creating graphs:   0%|          | 0/936 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b9888c2b7a0d41a5a516db0e350c5a7d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Processing graphs:   0%|          | 0/936 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -30,186 +55,160 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loaded Total ecore_555 with 548 graphs\n",
-      "Filtering...\n",
-      "Saving ecore_555 to pickle\n",
-      "Saved ecore_555 to pickle\n",
-      "Loaded ecore_555 with 548 graphs\n"
+      "['AndJunction' 'ApplicationCollaboration' 'ApplicationComponent'\n",
+      " 'ApplicationEvent' 'ApplicationFunction' 'ApplicationInteraction'\n",
+      " 'ApplicationInterface' 'ApplicationProcess' 'ApplicationService'\n",
+      " 'Artifact' 'Assessment' 'BusinessActor' 'BusinessCollaboration'\n",
+      " 'BusinessEvent' 'BusinessFunction' 'BusinessInteraction'\n",
+      " 'BusinessInterface' 'BusinessObject' 'BusinessProcess' 'BusinessRole'\n",
+      " 'BusinessService' 'Capability' 'CommunicationNetwork' 'Constraint'\n",
+      " 'Contract' 'CourseOfAction' 'DataObject' 'Deliverable' 'Device'\n",
+      " 'DistributionNetwork' 'Driver' 'Equipment' 'Facility' 'Gap' 'Goal'\n",
+      " 'Grouping' 'ImplementationEvent' 'Junction' 'Location' 'Material'\n",
+      " 'Meaning' 'Node' 'OrJunction' 'Outcome' 'Path' 'Plateau' 'Principle'\n",
+      " 'Product' 'Representation' 'Requirement' 'Resource' 'Stakeholder'\n",
+      " 'SystemSoftware' 'TechnologyCollaboration' 'TechnologyEvent'\n",
+      " 'TechnologyFunction' 'TechnologyInteraction' 'TechnologyInterface'\n",
+      " 'TechnologyProcess' 'TechnologyService' 'Value' 'ValueStream'\n",
+      " 'WorkPackage' None]\n",
+      "['application' 'business' 'implementation_migration' 'motivation' 'other'\n",
+      " 'strategy' 'technology' None]\n",
+      "['Access' 'Aggregation' 'Assignment' 'Association' 'Composition' 'Flow'\n",
+      " 'Influence' 'Realization' 'Serving' 'Specialization' 'Triggering']\n",
+      "Train edge classes: {3: 15948, 10: 8318, 4: 21093, 2: 9601, 8: 10883, 7: 13058, 0: 7842, 1: 9421, 6: 2308, 9: 2364, 5: 6204}\n",
+      "Test edge classes: {10: 2019, 3: 3861, 7: 3163, 4: 5257, 0: 1897, 2: 2363, 6: 579, 8: 2639, 5: 1542, 9: 602, 1: 2360}\n",
+      "Loaded graph dataset\n"
      ]
     }
    ],
    "source": [
-    "from data_loading.models_dataset import EcoreModelDataset, ArchiMateModelDataset\n",
+    "from data_loading.graph_dataset import GraphEdgeDataset\n",
+    "from data_loading.models_dataset import ArchiMateModelDataset\n",
     "\n",
-    "config_params = dict(\n",
-    "    min_edges = -1,\n",
-    "    reload=True,\n",
+    "dataset = ArchiMateModelDataset('eamodelset')\n",
+    "\n",
+    "graph_data_params = dict(\n",
+    "    test_ratio=0.2,\n",
+    "    add_negative_train_samples=True,\n",
+    "    neg_sampling_ratio=1,\n",
+    "    distance=1,\n",
+    "    use_embeddings=True,\n",
+    "    embed_model_name='bert-base-uncased',\n",
+    "    ckpt='results/eamodelset/edge_cls/checkpoint-8370'\n",
     ")\n",
-    "ecore_model_dataset = EcoreModelDataset('ecore_555', **config_params)\n",
-    "# ecore_model_dataset = EcoreModelDataset('mar-ecore-github', reload=False, **config_params)\n",
-    "# ecore_model_dataset = EcoreModelDataset('modelset', reload=False, **config_params)\n",
-    "# eamodelset = ArchiMateModelDataset('eamodelset', **config_params)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b2395e10fa424953b99abd417c2f2f2b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading Ecore_555:   0%|          | 0/548 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded Total ecore_555 with 548 graphs\n",
-      "Filtering...\n",
-      "Saving ecore_555 to pickle\n",
-      "Saved ecore_555 to pickle\n",
-      "Loaded ecore_555 with 444 graphs\n"
-     ]
-    }
-   ],
-   "source": [
-    "from data_loading.models_dataset import EcoreModelDataset\n",
     "\n",
-    "dataset_name = 'ecore_555'\n",
-    "\n",
-    "dataset = EcoreModelDataset(dataset_name, min_edges=10, reload=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c46baa7cbfdb4b1ab931f59125e79f46",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating graphs:   0%|          | 0/444 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b371dd74362747f1a9aa7de4b5ccb113",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Processing graphs:   0%|          | 0/444 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Node label: abstract\n",
-      "Train Node classes: {0: 10577, 1: 3212}\n",
-      "Test Node classes: {0: 2806, 1: 856}\n"
-     ]
-    }
-   ],
-   "source": [
-    "from data_loading.graph_dataset import GraphNodeDataset\n",
-    "\n",
-    "\n",
-    "graph_dataset = GraphNodeDataset(dataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "lm_dataset = graph_dataset.get_lm_graph_classification_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from utils import set_seed\n",
-    "\n",
-    "\n",
-    "set_seed(42)\n",
-    "\n",
-    "gnn_data = graph_dataset.get_gnn_graph_classification_data()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "355"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(gnn_data['train'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "set_seed(42)\n",
-    "\n",
-    "lm_data = graph_dataset.get_lm_graph_classification_data()\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gnn_y = [g.graph_label.item() for g in gnn_data['train']]"
+    "print(\"Loading graph dataset\")\n",
+    "graph_dataset = GraphEdgeDataset(dataset, **graph_data_params)\n",
+    "print(\"Loaded graph dataset\")\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "GNNConv(\n",
+       "  (aggregation): SumAggregation()\n",
+       "  (conv_layers): ModuleList(\n",
+       "    (0): GATv2Conv(768, 128, heads=4)\n",
+       "    (1-2): 2 x GATv2Conv(512, 128, heads=4)\n",
+       "  )\n",
+       "  (activation): ReLU()\n",
+       "  (dropout): Dropout(p=0.3, inplace=False)\n",
+       ")"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from models.gnn_layers import EdgeClassifer, GNNConv\n",
+    "\n",
+    "\n",
+    "input_dim = 768\n",
+    "\n",
+    "cls_label = 'type'\n",
+    "model_name = 'GATv2Conv'\n",
+    "\n",
+    "hidden_dim = 128\n",
+    "output_dim = 128\n",
+    "num_conv_layers = 3\n",
+    "num_mlp_layers = 3\n",
+    "num_heads = 4\n",
+    "residual = True\n",
+    "l_norm = False\n",
+    "dropout = 0.3\n",
+    "aggregation = 'sum'\n",
+    "\n",
+    "num_edges_label = f\"num_edges_{cls_label}\"\n",
+    "assert hasattr(graph_dataset, num_edges_label), f\"Graph dataset does not have attribute {num_edges_label}\"\n",
+    "num_classes = getattr(graph_dataset, num_edges_label)\n",
+    "\n",
+    "\n",
+    "gnn_conv_model = GNNConv(\n",
+    "    model_name=model_name,\n",
+    "    input_dim=input_dim,\n",
+    "    hidden_dim=hidden_dim,\n",
+    "    out_dim=output_dim,\n",
+    "    num_layers=num_conv_layers,\n",
+    "    num_heads=num_heads,\n",
+    "    residual=residual,\n",
+    "    l_norm=l_norm,\n",
+    "    dropout=dropout,\n",
+    "    aggregation=aggregation,\n",
+    "    edge_dim=768\n",
+    ")\n",
+    "\n",
+    "mlp_predictor = EdgeClassifer(\n",
+    "    input_dim=output_dim,\n",
+    "    hidden_dim=hidden_dim,\n",
+    "    num_layers=num_mlp_layers, \n",
+    "    num_classes=num_classes,\n",
+    "    bias=False,\n",
+    ")\n",
+    "\n",
+    "gnn_conv_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "lm_y = [l.item() for l in lm_data['train'][:]['labels']]"
+    "from torch_geometric.loader import DataLoader\n",
+    "\n",
+    "torch_dataset = graph_dataset.get_torch_geometric_data()\n",
+    "\n",
+    "dataloader = DataLoader(\n",
+    "    torch_dataset, \n",
+    "    batch_size=32, \n",
+    "    shuffle=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "DataBatch(train_edge_idx=[6737], test_edge_idx=[1668], train_pos_edge_label_index=[2, 6737], train_pos_edge_label=[6737], train_neg_edge_label_index=[2, 6737], train_neg_edge_label=[6737], test_pos_edge_label_index=[2, 1668], test_pos_edge_label=[1668], test_neg_edge_label_index=[2, 1668], test_neg_edge_label=[1668], overall_edge_index=[2, 8405], edge_index=[2, 6737], num_nodes=5418, x=[5418, 768], edge_attr=[8405, 768], node_type=[5418], node_layer=[5418], edge_type=[8405], batch=[5418], ptr=[33])\n"
+     ]
+    }
+   ],
+   "source": [
+    "for data in dataloader:\n",
+    "    print(data)\n",
+    "    break"
    ]
   },
   {
@@ -218,35 +217,26 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[7, 6, 4, 6, 6, 5, 5, 3, 7, 0, 4, 3, 4, 5, 4, 4, 4, 2, 1, 4, 6, 4, 5, 6, 0, 3, 7, 5, 6, 1, 1, 3, 5, 6, 5, 2, 6, 3, 4, 4, 6, 7, 4, 6, 5, 6, 6, 7, 2, 4, 3, 0, 4, 6, 6, 6, 1, 3, 3, 0, 6, 2, 6, 6, 4, 1, 2, 1, 5, 7, 5, 6, 2, 3, 3, 3, 6, 4, 3, 7, 1, 0, 1, 5, 6, 4, 6, 6, 5, 0, 1, 2, 6, 6, 0, 3, 6, 6, 4, 5, 6, 6, 6, 6, 6, 3, 2, 5, 6, 1, 4, 3, 0, 0, 6, 3, 6, 6, 3, 5, 4, 0, 3, 4, 6, 3, 6, 6, 6, 5, 6, 5, 5, 6, 4, 5, 5, 7, 4, 0, 0, 4, 6, 3, 3, 5, 6, 7, 5, 5, 3, 0, 6, 4, 6, 6, 6, 5, 3, 2, 0, 6, 3, 1, 5, 6, 1, 6, 7, 0, 1, 3, 4, 6, 6, 4, 1, 1, 5, 0, 3, 3, 7, 0, 5, 6, 4, 7, 6, 6, 1, 0, 5, 3, 3, 4, 5, 2, 6, 3, 3, 7, 5, 0, 4, 5, 7, 5, 6, 0, 5, 6, 4, 5, 6, 3, 0, 6, 5, 6, 0, 6, 3, 6, 4, 7, 3, 7, 1, 7, 6, 5, 3, 6, 6, 6, 5, 3, 0, 3, 3, 6, 3, 3, 2, 3, 6, 0, 6, 1, 4, 3, 2, 0, 0, 4, 6, 4, 4, 5, 3, 6, 4, 6, 0, 6, 4, 5, 6, 3, 1, 7, 2, 7, 3, 4, 6, 6, 0, 0, 6, 6, 1, 5, 3, 2, 6, 6, 3, 6, 0, 0, 4, 3, 6, 1, 6, 4, 0, 0, 3, 5, 3, 7, 3, 3, 6, 6, 6, 5, 4, 5, 6, 0, 6, 0, 5, 3, 0, 0, 3, 5, 4, 6, 3, 4, 1, 4, 2, 6, 6, 5, 3, 2, 7, 3, 5, 6, 6, 3, 3, 7, 0, 7, 6, 3, 6, 1, 1, 1, 6, 6, 6, 6, 6]\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(lm_y)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
       "text/plain": [
-       "(355, 355)"
+       "GNNConv(\n",
+       "  (aggregation): SumAggregation()\n",
+       "  (conv_layers): ModuleList(\n",
+       "    (0): GATv2Conv(768, 128, heads=4)\n",
+       "    (1-2): 2 x GATv2Conv(512, 128, heads=4)\n",
+       "  )\n",
+       "  (activation): ReLU()\n",
+       "  (dropout): Dropout(p=0.3, inplace=False)\n",
+       ")"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(gnn_y), len(lm_y)"
+    "gnn_conv_model.to(device='cuda')"
    ]
   },
   {
@@ -257,7 +247,7 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "torch.Size([5418, 512])"
       ]
      },
      "execution_count": 12,
@@ -266,8 +256,31 @@
     }
    ],
    "source": [
-    "lm_y == gnn_y"
+    "gnn_conv_model(data.x.to('cuda'), data.edge_index.to('cuda'), data.edge_attr[data.train_edge_idx].to('cuda')).shape"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import os\n",
+    "\n",
+    "for file in os.listdir('datasets/eamodelset/processed-models'):\n",
+    "    if os.path.isdir(os.path.join('datasets/eamodelset/processed-models', file)):\n",
+    "        with open(f'datasets/eamodelset/processed-models/{file}/model.json') as f:\n",
+    "            model = json.load(f)\n",
+    "            json.dump(model, open(f'datasets/eamodelset/processed-models/{file}/model.json', 'w'), indent=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
